--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,7 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => a.data.pubDate && b.data.pubDate ? (a.data.pubDate.valueOf() - b.data.pubDate.valueOf()) : 0
 );
 ---
 
@@ -52,6 +52,6 @@ const posts = (await getCollection('blog')).sort(
 		</main>
 
 		<Footer />
-		
+
 	</body>
 </html>
