--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -34,9 +34,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<Header />
 		<main>
 			<article>
-				{heroImage && <img width={720} height={360} src={heroImage} alt="" />}
+				{ heroImage && <img width={720} height={360} src={heroImage} alt="" /> }
 				<h1 class="title">{title}</h1>
-				<FormattedDate date={pubDate} />
+				{pubDate && <FormattedDate date={pubDate} /> }
 				{
 					updatedDate && (
 						<div class="last-updated-on">
