--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,6 +6,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
+//where the blogs are sorted --add tags and search?
 const posts = (await getCollection('blog')).sort(
 	(a, b) => a.data.pubDate && b.data.pubDate ? (a.data.pubDate.valueOf() - b.data.pubDate.valueOf()) : 0
 );
