--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,8 @@
 	--background-color-code : #f2f2f2;;
 	--text-header-color: #222;
 	--text-color: #333;
+
+	--document-pading: 1rem;
 }
 
 h1, h2, h3, h4, h5, h6, strong, b {
@@ -34,39 +36,67 @@ h1, h2, h3, h4, h5, h6, strong, b {
 
 
  body {
-	font-family: Verdana, sans-serif;
-	margin: auto;
-	padding: 20px;
-	max-width: 86ch;
-	text-align: left;
 	background-color: var(--background-color);
+	color: var(--text-color);
+
+	font-family: Verdana, sans-serif;
+	margin: 0 auto;
+	/* max-width: 100d; */
+	min-height: 100vh;
+
+	text-align: left;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	line-height: 1.5;
-	color: var(--text-color);
+		
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+	justify-items: center;
+	/* flex-direction: column; */
+	max-width: 86ch;
 }
 
+main {
+	/* justify-self: center; */
+	padding: var(--document-pading);
+}
 
+header{
+	width: calc(100% - 2 * var(--document-pading));
+	padding: var(--document-pading)
+}
+
+header > nav {
+	display: flex;
+	/* justify-content: space-evenly; */
+	gap: 1em;
+}
 
 a {
 	color: #3273dc;
 }
+
 nav a {
 	margin-right: 10px;
 }
+
 textarea {
 	width: 100%;
 	font-size: 16px;
 }
+
 input {
 	font-size: 16px;
 }
+
 content {
 	line-height: 1.6;
 }
+
 table {
 	width: 100%;
 }
+
 img {
 	max-width: 100%;
 	height: auto;
@@ -80,12 +110,18 @@ code {
 pre {
 	padding: 1rem;
 }
+
 pre > code {
 	all: unset;
 }
+
 blockquote {
 	border: 1px solid #999;
 	padding: 2px 0px 2px 20px;
 	margin: 0px;
 	font-style: italic;
+}
+
+footer {
+	padding-bottom: var(--document-pading);
 }
