--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,10 +6,11 @@
 
 :root{
 	--background-color: #ccc;
-	--background-color-code : #f2f2f2;;
+	--background-color-code : #f2f2f2;
+	--background-quote-color: #0d1117;
 	--text-header-color: #222;
 	--text-color: #333;
-
+	
 	--document-pading: 1rem;
 }
 
@@ -21,6 +22,7 @@ h1, h2, h3, h4, h5, h6, strong, b {
 	:root{
 		--background-color: #123;
 		--background-color-code : #2a3a4a;
+		--background-quote-color: #0a0c0f7d;
 		--text-header-color: #ccc;
 		--text-color: #aaa;
 	}
@@ -29,9 +31,7 @@ h1, h2, h3, h4, h5, h6, strong, b {
 		color: var(--text-header-color);
 	}
 
-	code {
-		background-color: var(--background-color-code);
-	}
+	
 }
 
 
@@ -108,7 +108,12 @@ code {
 }
 
 pre {
+	background-color: var(--background-quote-color);
+	overflow-y: auto;
+
 	padding: 1rem;
+	max-height: 22em;
+	box-sizing: border-box;
 }
 
 pre > code {
@@ -117,6 +122,7 @@ pre > code {
 
 blockquote {
 	border: 1px solid #999;
+	background-color: var(--background-quote-color);
 	padding: 2px 0px 2px 20px;
 	margin: 0px;
 	font-style: italic;
