--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,8 @@ import FormattedDate from '../../components/FormattedDate.astro';
 
 //where the blogs are sorted --add tags and search?
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate && b.data.pubDate ? (a.data.pubDate.valueOf() - b.data.pubDate.valueOf()) : 0
+	(a, b) => 
+			( (b.data.pubDate ? b.data.pubDate.valueOf() : 1) - (a.data.pubDate ? a.data.pubDate.valueOf() : 1 )) 
 );
 ---
 
