--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,37 +13,22 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>🧑‍🚀 Hello World!</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+                Welcome to the blog. This is the place where I will drop musings, make notes on tech, and provide some clean reference grade material for your enjoyment. 
+                As a human being, I am often forgetful. Thankfully I have a domain and the ability to write markdown. The goal here is to create a place where I can share
+                what's going on in a blog format. 
+            </p>
+            <p>
+                Sometimes I will wrtite reference material for what I am studying. This can range from hardware standards to OS specific tools. 
+                Having this material in one place will prove useful for study. It may also prove useful to others studying for exams and such.  
 			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+            <p>
+                Other times I will write about things I struggled to learn, usually due to a lack of decent material online. This can range from React hooks like useContext(), 
+                to how DISM works for modifying windows images. It's not that there isn't material on these subjects, but rather that the material is hard to find or follow. 
+                I'm sure you've noticed how the search engines are getting worse and more full of ads these days. Having an easy to lookup referece will make it easy to relearn 
+                these topics if the need arises. It will also allow me to practice writing, something that I don't do enough.
+            </p>
 		</main>
 		<Footer />
 	</body>
