changed font for title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello World!</h1>
+			<h1>Hello World!</h1>
 			<p>
                 Welcome to the blog. This is the place where I will drop musings, make notes on tech, and provide some clean reference grade material for your enjoyment. 
                 As a human being, I am often forgetful. Thankfully I have a domain and the ability to write markdown. The goal here is to create a place where I can share
