--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@ import { SITE_TITLE } from '../consts';
 ---
 
 <header>
-	<h2>
+	<h1>
 		{SITE_TITLE}
-	</h2>
+	</h1>
 	<nav>
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
@@ -19,7 +19,10 @@ import { SITE_TITLE } from '../consts';
 	header {
 		margin: 0em 0 2em;
 	}
-	h2 {
+	h1 {
+		/* font-size: 1.75rem; */
 		margin: 0.5em 0;
+		color: #94a;
+		text-shadow: .1em .1em .15em #00ffffaf;
 	}
 </style>
