changed some colors

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,6 +23,7 @@ import { SITE_TITLE } from '../consts';
 		/* font-size: 1.75rem; */
 		margin: 0.5em 0;
 		color: #94a;
-		text-shadow: .1em .1em .15em #00ffffaf;
+		width: fit-content;
+		text-shadow: .1em .1em 0.12em #00ffffaf;
 	}
 </style>
