--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,13 +17,36 @@ import { SITE_TITLE } from '../consts';
 </header>
 <style>
 	header {
-		margin: 0em 0 2em;
+
+        display: grid;
+        width: 100%;
+
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+
+        /* background-color: #00ffff0f; */
+
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+
+        position: fixed;
+
 	}
 	h1 {
-		/* font-size: 1.75rem; */
-		margin: 0.5em 0;
+		/* font-size: 2.75rem; */
+		margin: 0;
 		color: #94a;
 		width: fit-content;
 		text-shadow: .1em .1em 0.12em #00ffffaf;
 	}
+
+    nav {
+        margin-bottom: .2em;
+    }
+
+    nav a:hover {
+        background-color: #94a;
+    }
+
 </style>
