--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,6 +58,7 @@ h1, h2, h3, h4, h5, h6, strong, b {
 
 main {
 	/* justify-self: center; */
+    margin-top: 8em;
 	padding: var(--document-pading);
 }
 
