--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ import { SITE_TITLE } from '../consts';
 	header {
 
         display: grid;
-        width: 100%;
+        max-width: 100%;
 
         justify-content: center;
         margin: 0;
@@ -37,7 +37,7 @@ import { SITE_TITLE } from '../consts';
 		/* font-size: 2.75rem; */
 		margin: 0;
 		color: #94a;
-		width: fit-content;
+		/* width: fit-content; */
 		text-shadow: .1em .1em 0.12em #00ffffaf;
 	}
 
