--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,7 +65,7 @@ main {
 }
 
 header{
-	/* width: calc(100% - 2 * var(--document-pading)); */
+	width: calc(100% - 2 * var(--document-pading));
 	padding: var(--document-pading)
 }
 
