fixed footer alignment

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,5 +8,7 @@ const today = new Date();
 <style>
 	footer {
 		text-align: center;
+        align-self:end;
+        /* max-height: 2em; */
 	}
 </style>
