fixed base const

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@ import { SITE_TITLE, BASE } from '../consts';
 		{SITE_TITLE}
 	</h1>
 	<nav>
-		<HeaderLink href="{BASE}/">Home</HeaderLink>
-		<HeaderLink href="{BASE}/blog">Blog</HeaderLink>
-		<HeaderLink href="{BASE}/about">About</HeaderLink>
+		<HeaderLink href={BASE + "/"}>Home</HeaderLink>
+		<HeaderLink href={BASE + "/blog"}>Blog</HeaderLink>
+		<HeaderLink href={BASE + "/about"}>About</HeaderLink>
 		<HeaderLink href='https://christopherjcarlin.com' target="_blank">Portfolio</HeaderLink>
 		<HeaderLink href="https://github.com/brunscii" target="_blank">GitHub</HeaderLink>
 	</nav>
