--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,7 +2,7 @@
 import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
+import { SITE_TITLE, SITE_DESCRIPTION, BASE } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
@@ -57,7 +57,7 @@ const posts = (await getCollection('blog')).sort(
 							<li>
 								{post.data.pubDate ? <FormattedDate date={post.data.pubDate} />
 								: <span> ----- </span>}
-								<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
+								<a href={`${BASE}/blog/${post.slug}/`}>{post.data.title}</a>
 							</li>
 							<p>
 								{post.data.description}
