--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 
 :root{
-	--background-color: #ccc;
-	--background-color-code : #f2f2f2;
+	--bg-color: #ccc;
+	--bg-color-code : #f2f2f2;
 	--background-quote-color: #0d1117;
 	--text-header-color: #222;
 	--text-color: #333;
@@ -15,8 +15,8 @@ h1, h2, h3, h4, h5, h6, strong, b {
 
 @media( prefers-color-scheme: dark ){
 	:root{
-		--background-color: #123;
-		--background-color-code : #2a3a4a;
+		--bg-color: #123;
+		--bg-color-code : #2a3a4a;
 		--background-quote-color: #0a0c0f7d;
 		--text-header-color: #ccc;
 		--text-color: #aaa;
@@ -25,13 +25,11 @@ h1, h2, h3, h4, h5, h6, strong, b {
 	h1, h2, h3, h4, h5, h6, strong, b {
 		color: var(--text-header-color);
 	}
-
-	
 }
 
 
  body {
-	background-color: var(--background-color);
+	background-color: var(--bg-color);
 	color: var(--text-color);
 
 	font-family: Verdana, sans-serif;
@@ -59,25 +57,11 @@ main {
     box-sizing: border-box;
 }
 
-header{
-	width: calc(100% - 2 * var(--document-pading));
-	padding: var(--document-pading)
-}
 
-header > nav {
-	display: flex;
-	/* justify-content: space-evenly; */
-	gap: 1em;
-}
 
 a {
 	color: var(--link-color);
 	/* color: #3273dc; */
-}
-
-nav a {
-	margin-right: 10px;
-	/* color: #00ffffaf; */
 }
 
 textarea {
@@ -104,7 +88,7 @@ img {
 
 code {
 	padding: 2px 5px;
-	background-color: var(--background-color-code);
+	background-color: var(--bg-color-code);
 }
 
 pre {
