changed link hover color

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -55,9 +55,10 @@ import { SITE_TITLE, BASE } from '../consts';
     nav a:hover {
         /* background-color: #50105d; */
 				/* opacity:.3; */
-				border-radius: 2px;
-				background: linear-gradient( 45deg, rgba(255, 0, 0, 0.192), rgba(0, 0, 255, 0.329)),
-										linear-gradient( -45deg, rgba(255, 0, 0, 0.192), rgba(0, 0, 255, 0.329));
+				border-radius: 5px;
+        background-color: rgba(63, 63, 63, 0.5);
+				/* background: linear-gradient( 45deg, rgba(255, 0, 0, 0.192), rgba(0, 0, 255, 0.329)), */
+										/* linear-gradient( -45deg, rgba(255, 0, 0, 0.192), rgba(0, 0, 255, 0.329)); */
     }
 
 </style>
