--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 	--background-quote-color: #0d1117;
 	--text-header-color: #222;
 	--text-color: #333;
-	--link-color: #00ffffaf;
+	--link-color: #008080;
 	--document-pading: 1rem;
 }
 
