--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,8 +18,8 @@ h1, h2, h3, h4, h5, h6, strong, b {
 		--bg-color: #123;
 		--bg-color-code : #2a3a4a;
 		--background-quote-color: #0a0c0f7d;
-		--text-header-color: #ccc;
-		--text-color: #aaa;
+		--text-header-color: #dadada;
+		--text-color: #dadada;
 	}
 
 	h1, h2, h3, h4, h5, h6, strong, b {
