changed the category color

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -43,7 +43,7 @@ const posts = (await getCollection('blog')).sort(
 				font-size: .8em;
 			}
       .category {
-        color: red;
+        color: var(--category-color);
       }
       #blog-category-search {
         align-self: center;
