better grouping and color

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -85,12 +85,12 @@ const posts = (await getCollection('blog')).sort(
 
         <!-- #This is a list of the available blogs -->
 				<ul> 
-          <li>
-            <span> <b>Date</b></span>
+          <li style="border-bottom:solid 3px #30303065;">
+            <span><b>Date</b></span>
             <span><b>Title</b></span>
             <span><b>Category</b></span>
+            <p><b>Description</b></p>
           </li>
-          <p><b>Description</b></p>
           <br>
 
 
