--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,8 +19,8 @@ h1, h2, h3, h4, h5, h6, strong, b {
 		--bg-color: #123;
 		--bg-color-code : #2a3a4a;
 		--background-quote-color: #0a0c0f7d;
-		--text-header-color: #b0c0c0;
-		--text-color: #cfe9e9;
+		--text-header-color: #008080;
+		--text-color: rgb(231, 231, 214);
 	}
 
 	h1, h2, h3, h4, h5, h6, strong, b {
