small style changes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,12 @@ import Footer from '../components/Footer.astro';
 <html lang="en">
 	<head>
 		<BaseHead title='about the blog' description="about page for Chris's blog" />
+
+    <style>
+      h1:first-of-type {
+        margin-top: 0;
+      }
+    </style>
 	</head>
 	<body>
 		<Header />
