--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     
     <style>
+
+      h1:first-of-type {
+        margin-top: 0;
+      }
       
       #welcome-text {
         font-size: 2em;
