--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,6 +11,9 @@ const posts = (await getCollection('blog')).sort(
 	(a, b) => 
 			( (b.data.pubDate ? b.data.pubDate.valueOf() : 1) - (a.data.pubDate ? a.data.pubDate.valueOf() : 1 )) 
 );
+
+
+
 ---
 
 <!DOCTYPE html>
@@ -150,7 +153,8 @@ const posts = (await getCollection('blog')).sort(
 	</body>
 
   <script>
-
+    
+    
     let searchBox = document.querySelector("#blog-category-search");
     let searchTerm = searchBox.textContent;
     let searchResults = document.querySelectorAll(".blog-post");
@@ -165,25 +169,29 @@ const posts = (await getCollection('blog')).sort(
     })
 
     //This is where we search the list of blogs for matches and update the list
-    function updateBlogList( SearchTerm ) {
-      searchResults.forEach( (res) => {
-        if (res.innerText.includes(searchTerm) && searchTerm != "") {
-          console.log(res.innerText + "match");
-          console.log(res);
-          res.style.backgroundColor = "red";
-        }
-      })
-    }
+    // function updateBlogList( SearchTerm ) {
+      
+      
+    //   searchResults.forEach( (res) => {
+    //     if (res.innerText.includes(searchTerm) && searchTerm != "") {
+    //       console.log(res.innerText + "match");
+    //       console.log(res);
+    //       res.style.backgroundColor = "red";
+    //     }
+    //   })
+      
+    // }
 
     console.log(searchTerm);
     console.log(searchBox);
-
+    console.log(updateBlogList(searchTerm));
     // searchResults.forEach( (res) =>{
       
       
     //   console.log(res.innerText);
 
     //   console.log(res.innerText.includes(searchTerm));
+
 
     // })
   </script>
