--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,10 +21,9 @@ import Footer from '../components/Footer.astro';
 		<main>
 			<h1>About</h1>			
 			<p>
-				This blog is meant as a place for me to drop musing and concepts about tech. 
-				It is a mix of reference material and notebook, allowing me to dump my brain 
-				and not worry about forgetting important concepts. Some of the blog posts will
-				be intended to serve as a will be marked as such. Others will be thoughts, reviews,
+				This blog is meant as a place for me to drop findings and concepts about tech. 
+				It is a mix of reference material and notebook; allowing me to dump my brain 
+				and not worry about forgetting important concepts. This will include thoughts, reviews,
 				or just ideas that I wish to write down. The goal here is to share knowledge with
 				myself as well as others. 
 			</p>
