--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,9 +43,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
       <div id="welcome-text">Welcome to the blog.</div>
 			
       <p class="welcome-page-text">
-          This is the place where I will drop musings, make notes on tech, and provide some clean reference grade material for your enjoyment. 
-          As a human being, I am often forgetful. Thankfully I have a domain and the ability to write markdown. The goal here is to create a place where I can share
-          what's going on in a blog format. 
+          This is the place where I will drop musings, make notes on tech, and provide knowledge. 
+          Using my own domain and the ability to write markdown, I shall create a knowledgebase of sorts. 
+          The goal here is to create a place where I can share what I'm learning in a blog style format. 
       </p>
       <p class="welcome-page-text">
           Sometimes I will wrtite reference material for what I am studying. This can range from hardware standards to OS specific tools. 
@@ -54,10 +54,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
       <p class="welcome-page-text">
           Other times I will write about things I struggled to learn, usually due to a lack of decent material online. This can range from React hooks like useContext(), 
           to how DISM works for modifying windows images. It's not that there isn't material on these subjects, but rather that the material is hard to find or follow. 
-          these topics if the need arises. It will also allow me to practice writing, something that I don't do enough.
-          I'm sure you've noticed how the search engines are getting worse and more full of ads these days. Having an easy to lookup referece will make it easy to relearn 
+          It will also allow me to sharpen my writing skills.
       </p>
-		</main>
+      <p class="welcome-page-text">
+          I will try to push myself, as best I can, to maintain and add to this blog as I can. This is a challenge with my current work-life schedule.
+      </p>
+    </main>
 		<Footer />
 	</body>
 
