--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,11 +7,13 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
 //where the blogs are sorted --add tags and search?
+// sort by the newest first
 const posts = (await getCollection('blog')).sort(
 	(a, b) => 
 			( (b.data.pubDate ? b.data.pubDate.valueOf() : 1) - (a.data.pubDate ? a.data.pubDate.valueOf() : 1 )) 
 );
 
+let searchTerm = ''
 
 
 ---
@@ -96,15 +98,15 @@ const posts = (await getCollection('blog')).sort(
 			<section>
 
         <!-- This is the search bar -->
-        <input type="search" placeholder="Search" name="category-search" id="blog-category-search"></in>
+        <input type="search" placeholder="Search" name="category-search" id="blog-category-search" value={searchTerm}></in>
 
         <!-- #This is a list of the available blogs -->
 				<ul id="blog-list"> 
-          <li style="border-bottom:solid 3px #30303065;">
-            <span><b>Date</b></span>
-            <span><b>Title</b></span>
-            <span><b>Category</b></span>
-            <p><b>Description</b></p>
+          <li  id="blog-search-headers" style="border-bottom:solid 3px #30303065;">
+            <h4>Date</h4>
+            <h4>Title</h4>
+            <h4>Category</h>
+            <h5>Description</h5>
           </li>
           <br>
 
@@ -112,11 +114,12 @@ const posts = (await getCollection('blog')).sort(
           <!-- TODO: add responsive live search here 
               that checks input and searches blog's by category or name -->
           <!-- if nothing in the search then show this -->
-					{
+					{ 
 						posts.map((post) => (
 
 						  // only show the link if the post is a final draft
-							!post.data.draft && 
+							!post.data.draft &&
+              post.data.description.includes(searchTerm) && 
 							
 							<li class="blog-post">
 
@@ -129,7 +132,7 @@ const posts = (await getCollection('blog')).sort(
 								<a href={`${BASE}blog/${post.slug}/`}>{post.data.title}</a>
                 </span>
 
-                <span class="category">{post.data.category ?? post.data.category}</span>
+                <span class="category">{post.data.category ?? " "}</span>
 							
               </li>
 
@@ -153,17 +156,27 @@ const posts = (await getCollection('blog')).sort(
 	</body>
 
   <script>
-    
-    
+
+    const updateBlogList = function( searchTerm ){ 
+
+    }
+
+      
     let searchBox = document.querySelector("#blog-category-search");
-    let searchTerm = searchBox.textContent;
+    let searchTerm = '';
     let searchResults = document.querySelectorAll(".blog-post");
     let blogList = document.querySelector("#blog-list");
     
-    searchBox.addEventListener("input", (input) => {
-      console.log(input);
-      searchTerm = searchBox.value;
-      console.log(searchTerm);
+    searchBox?.addEventListener("input", (input) => {
+      if(input.data !== null){
+        searchTerm = searchTerm + input.data
+        console.log(searchTerm)
+      }
+      else{
+        searchTerm = searchTerm.substring(0, searchTerm.length-1 )
+      }
+       
+      // {searchTerm} = searchTerm 
 
       updateBlogList(searchTerm);
     })
