--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -24,7 +24,11 @@ let searchTerm = ''
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 
 		<style>
-
+      .hidden {
+        visibility: hidden;
+        display: none;
+        }
+      }
       
 
 			ul {
@@ -88,6 +92,10 @@ let searchTerm = ''
         color: transparent;
       }
 
+      .blog-post-description {
+        grid-column-end: span 3;
+      }
+
 		</style>
 
 	</head>
@@ -133,13 +141,13 @@ let searchTerm = ''
                 </span>
 
                 <span class="category">{post.data.category ?? " "}</span>
-							
-              </li>
 
 							<!--- This is the Description --->
-							<p>
+							<p class="blog-post-description">
 								{post.data.description}
 							</p>
+							
+              </li>
 
 							// :
 							// ''
@@ -157,15 +165,26 @@ let searchTerm = ''
 
   <script>
 
-    const updateBlogList = function( searchTerm ){ 
-
-    }
-
-      
+    
+    
     let searchBox = document.querySelector("#blog-category-search");
     let searchTerm = '';
     let searchResults = document.querySelectorAll(".blog-post");
     let blogList = document.querySelector("#blog-list");
+    
+    const updateBlogList = function( searchTerm ){ 
+      if( blogList ){
+        blogList.querySelectorAll('.blog-post').forEach( blog => {
+          if( blog.textContent?.toLowerCase().includes(searchTerm.toLowerCase())){
+            console.log(blog.textContent)
+            blog.classList.remove('hidden')
+          } else{
+            blog.classList.add('hidden')
+          }
+        }) 
+      }
+    }
+        
     
     searchBox?.addEventListener("input", (input) => {
       if(input.data !== null){
@@ -178,7 +197,8 @@ let searchTerm = ''
        
       // {searchTerm} = searchTerm 
 
-      updateBlogList(searchTerm);
+      // updateBlogList(searchTerm);
+      updateBlogList(searchBox.value);
     })
 
     //This is where we search the list of blogs for matches and update the list
@@ -197,7 +217,7 @@ let searchTerm = ''
 
     console.log(searchTerm);
     console.log(searchBox);
-    console.log(updateBlogList(searchTerm));
+    // console.log(updateBlogList(searchTerm));
     // searchResults.forEach( (res) =>{
       
       
