--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -14,7 +14,12 @@ export async function getStaticPaths() {
 }
 type Props = CollectionEntry<'blog'>;
 
-const post = Astro.props;
+// const post = Astro.props;
+const posts = await getCollection('blog')
+const { slug } = Astro.params;
+const post = posts.find((page)=> page.slug === slug);
+if(!post) return Astro.redirect('404');
+
 const { Content } = await post.render();
 ---
 
